# erg-language-server

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  package-lock.json  package.json
.github/workflows/: release.yml  rust.yml
src/: client.rs  hir_visitor.rs  lib.rs  main.rs  message.rs  server.rs
