[package]
name = "els"
version = "0.1.7"
edition = "2021"
description = "An Erg compiler frontend for IDEs, implements LSP."
authors = ["Shunsuke Shibayama <sbym1346@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/erg-lang/erg-language-server"
documentation = "https://docs.rs/els"
homepage = "https://erg-lang.org/"
keywords = ["erg", "language-server"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
erg_common = "0.5.10"
erg_compiler = "0.5.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.85"
lsp-types = "0.93.1"
