[package]
name = "els"
version = "0.1.12"
edition = "2021"
description = "An Erg compiler frontend for IDEs, implements LSP."
authors = ["Shunsuke Shibayama <sbym1346@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/erg-lang/erg-language-server"
documentation = "https://docs.rs/els"
homepage = "https://erg-lang.org/"
keywords = ["erg", "language-server"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# erg_common = "0.6.0-beta.0"
# erg_compiler = "0.6.0-beta.0"
erg_common = { git = "https://github.com/erg-lang/erg" }
erg_compiler = { git = "https://github.com/erg-lang/erg" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.85"
lsp-types = { version = "0.93.2", features = ["proposed"] }
