[package]
name = "els"
version = "0.1.13-nightly.1"
edition = "2021"
description = "An Erg compiler frontend for IDEs, implements LSP."
authors = ["Shunsuke Shibayama <sbym1346@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/erg-lang/erg-language-server"
documentation = "https://docs.rs/els"
homepage = "https://erg-lang.org/"
keywords = ["erg", "language-server"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
py_compatible = ["erg_compiler/py_compatible"]

[dependencies]
# erg_common = "0.6.1-nightly.1"
# erg_compiler = "0.6.1-nightly.1"
erg_common = { git = "https://github.com/erg-lang/erg", branch = "main" }
erg_compiler = { git = "https://github.com/erg-lang/erg", branch = "main" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.85"
lsp-types = { version = "0.93.2", features = ["proposed"] }

[lib]
path = "src/lib.rs"
